[gd_scene load_steps=3 format=2]

[ext_resource path="res://Objects/Monsters/Monster.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Monsters/hunter.gd" type="Script" id=2]

[node name="hunter" instance=ExtResource( 1 )]
script = ExtResource( 2 )
HP = 300.0
speed = 60.0
attack_radius = 400.0
pname = "hunter"

[node name="free_timer" parent="." index="2"]
wait_time = 4.0

[node name="target_update" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true

[node name="vision_update" type="Timer" parent="." index="6"]
one_shot = true

[node name="attk_dl" type="Timer" parent="." index="7"]
wait_time = 1.5
one_shot = true

[node name="hand" type="Node2D" parent="." index="8"]
position = Vector2( -0.262009, -33.2205 )
[connection signal="timeout" from="target_update" to="." method="_on_target_update_timeout"]
[connection signal="timeout" from="vision_update" to="." method="_on_vision_update_timeout"]
[connection signal="timeout" from="attk_dl" to="." method="_on_attk_dl_timeout"]
